Changes are the following:
1. Update scripts, which create pictures.
2. Modify script `add_taxonomy_names.py` so that now it requests taxonomy information from NCBI Taxonomy if it is not present in the RefSeq `.catalog` file.

--- a/exploration_scripts/seq_logos/logo_making.ipynb
+++ b/exploration_scripts/seq_logos/logo_making.ipynb
@@ -149,7 +149,7 @@
     ")\n",
     "my_logo.ax.set_xticklabels(ecoli_xticks)\n",
     "my_logo.ax.set_xlim([-0.4, 20.4])\n",
-    "ax1.tick_params(labelbottom=True)"
+    "my_logo.ax.tick_params(labelbottom=True)"
    ]
   },
   {
@@ -295,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
