correct pages, explore 4.210

--- a/exploration_scripts/seq_logos/logo_making.ipynb
+++ b/exploration_scripts/seq_logos/logo_making.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import importlib\n",
     "\n",
     "import numpy as np\n",
@@ -35,31 +36,31 @@
    },
    "outputs": [],
    "source": [
-    "my_df, coverages = create_matrix.create_matrix(\n",
-    "    'seq_data/Carsonella_21_tails.aln.fasta'\n",
-    ")\n",
+    "# my_df, coverages = create_matrix.create_matrix(\n",
+    "#     'seq_data/Carsonella_21_tails.aln.fasta'\n",
+    "# )\n",
     "\n",
-    "my_x_ticks = np.array([0, 1, 6, 11, 16, 20])\n",
-    "ecoli_xticks = -np.array([21, 20, 15, 10, 5, 1])\n",
+    "# my_x_ticks = np.array([0, 1, 6, 11, 16, 20])\n",
+    "# ecoli_xticks = -np.array([21, 20, 15, 10, 5, 1])\n",
     "\n",
     "\n",
     "\n",
-    "# create a Logo object\n",
-    "my_logo = logomaker.Logo(my_df,\n",
-    "                         font_name='DejaVu Sans',\n",
-    "                         color_scheme='colorblind_safe',\n",
-    "                         figsize=[14, 3],\n",
-    "                         width=.8\n",
-    ")\n",
+    "# # create a Logo object\n",
+    "# my_logo = logomaker.Logo(my_df,\n",
+    "#                          font_name='DejaVu Sans',\n",
+    "#                          color_scheme='colorblind_safe',\n",
+    "#                          figsize=[14, 3],\n",
+    "#                          width=.8\n",
+    "# )\n",
     "\n",
-    "# # style using Axes methods\n",
-    "my_logo.ax.set_ylabel('Frequency', fontsize=12)\n",
+    "# # # style using Axes methods\n",
+    "# my_logo.ax.set_ylabel('Frequency', fontsize=12)\n",
     "\n",
-    "my_logo.ax.set_xlabel('Position', fontsize=12)\n",
-    "my_logo.ax.set_xticks(\n",
-    "    my_x_ticks\n",
-    ")\n",
-    "my_logo.ax.set_xticklabels(ecoli_xticks)"
+    "# my_logo.ax.set_xlabel('Position', fontsize=12)\n",
+    "# my_logo.ax.set_xticks(\n",
+    "#     my_x_ticks\n",
+    "# )\n",
+    "# my_logo.ax.set_xticklabels(ecoli_xticks)"
    ]
   },
   {
@@ -75,36 +76,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_df, coverages = create_matrix.create_matrix(\n",
-    "    'seq_data/Flavobacteriales_21_tails.aln_MANUAL.fasta'\n",
-    ")\n",
+    "# my_df, coverages = create_matrix.create_matrix(\n",
+    "#     'seq_data/Flavobacteriales_21_tails.aln_MANUAL.fasta'\n",
+    "# )\n",
     "\n",
-    "my_x_ticks =  np.array([  0,  1,  6, 11, 16, 20])\n",
-    "ecoli_xticks = -np.array([21, 20, 15, 10,  5,  1])\n",
+    "# my_x_ticks =  np.array([  0,  1,  6, 11, 16, 20])\n",
+    "# ecoli_xticks = -np.array([21, 20, 15, 10,  5,  1])\n",
     "\n",
-    "# create a Logo object\n",
-    "my_logo = logomaker.Logo(my_df,\n",
-    "                         font_name='DejaVu Sans',\n",
-    "                         color_scheme='colorblind_safe',\n",
-    "                         figsize=[14, 3],\n",
-    "                         width=.8\n",
-    ")\n",
+    "# # create a Logo object\n",
+    "# my_logo = logomaker.Logo(my_df,\n",
+    "#                          font_name='DejaVu Sans',\n",
+    "#                          color_scheme='colorblind_safe',\n",
+    "#                          figsize=[14, 3],\n",
+    "#                          width=.8\n",
+    "# )\n",
     "\n",
-    "# style using Logo methods\n",
-    "for i in range(13, 19):\n",
-    "    my_logo.highlight_position(p=i, color='#BFBFBF', alpha=.7)\n",
-    "# end for\n",
+    "# # style using Logo methods\n",
+    "# for i in range(13, 19):\n",
+    "#     my_logo.highlight_position(p=i, color='#BFBFBF', alpha=.7)\n",
+    "# # end for\n",
     "\n",
-    "# style using Axes methods\n",
+    "# # style using Axes methods\n",
     "\n",
-    "my_logo.ax.set_ylabel('Frequency', fontsize = 12)\n",
+    "# my_logo.ax.set_ylabel('Frequency', fontsize = 12)\n",
     "\n",
     "\n",
-    "my_logo.ax.set_xlabel('Position', fontsize = 12)\n",
-    "my_logo.ax.set_xticks(\n",
-    "    my_x_ticks\n",
-    ")\n",
-    "my_logo.ax.set_xticklabels(ecoli_xticks)\n"
+    "# my_logo.ax.set_xlabel('Position', fontsize = 12)\n",
+    "# my_logo.ax.set_xticks(\n",
+    "#     my_x_ticks\n",
+    "# )\n",
+    "# my_logo.ax.set_xticklabels(ecoli_xticks)\n"
    ]
   },
   {
@@ -120,36 +121,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_df, coverages = create_matrix.create_matrix(\n",
-    "    'seq_data/Sulfolobaceae_21_tails.aln_MANUAL.fasta'\n",
-    ")\n",
+    "# my_df, coverages = create_matrix.create_matrix(\n",
+    "#     'seq_data/Sulfolobaceae_21_tails.aln_MANUAL.fasta'\n",
+    "# )\n",
     "\n",
-    "my_x_ticks =   np.array([  0,  1,  6, 11, 16, 19, 20])\n",
-    "ecoli_xticks = -np.array([21, 20, 15, 10,  5,  2,  1])\n",
+    "# my_x_ticks =   np.array([  0,  1,  6, 11, 16, 19, 20])\n",
+    "# ecoli_xticks = -np.array([21, 20, 15, 10,  5,  2,  1])\n",
     "\n",
-    "# create a Logo object\n",
-    "my_logo = logomaker.Logo(my_df,\n",
-    "                         font_name='DejaVu Sans',\n",
-    "                         color_scheme='colorblind_safe',\n",
-    "                         figsize=[14, 3],\n",
-    "                         width=.8\n",
-    ")\n",
+    "# # create a Logo object\n",
+    "# my_logo = logomaker.Logo(my_df,\n",
+    "#                          font_name='DejaVu Sans',\n",
+    "#                          color_scheme='colorblind_safe',\n",
+    "#                          figsize=[14, 3],\n",
+    "#                          width=.8\n",
+    "# )\n",
     "\n",
-    "# style using Logo methods\n",
-    "for i in range(13, 19):\n",
-    "    my_logo.highlight_position(p=i, color='#BFBFBF', alpha=.7)\n",
-    "# end for\n",
+    "# # style using Logo methods\n",
+    "# for i in range(13, 19):\n",
+    "#     my_logo.highlight_position(p=i, color='#BFBFBF', alpha=.7)\n",
+    "# # end for\n",
     "\n",
-    "# style using Axes methods\n",
-    "my_logo.ax.set_ylabel('Frequency', fontsize=12)\n",
+    "# # style using Axes methods\n",
+    "# my_logo.ax.set_ylabel('Frequency', fontsize=12)\n",
     "\n",
-    "my_logo.ax.set_xlabel('Position', fontsize=12)\n",
-    "my_logo.ax.set_xticks(\n",
-    "    my_x_ticks\n",
-    ")\n",
-    "my_logo.ax.set_xticklabels(ecoli_xticks)\n",
-    "my_logo.ax.set_xlim([-0.4, 20.4])\n",
-    "my_logo.ax.tick_params(labelbottom=True)"
+    "# my_logo.ax.set_xlabel('Position', fontsize=12)\n",
+    "# my_logo.ax.set_xticks(\n",
+    "#     my_x_ticks\n",
+    "# )\n",
+    "# my_logo.ax.set_xticklabels(ecoli_xticks)\n",
+    "# my_logo.ax.set_xlim([-0.4, 20.4])\n",
+    "# my_logo.ax.tick_params(labelbottom=True)"
    ]
   },
   {
@@ -176,9 +177,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
+    "input_dirpath = '/mnt/1.5_drive_0/RiboGrove_workdirs/4.210/antiSD/draw_seq_logos'\n",
+    "axis_label_fontsize = 14\n",
+    "\n",
+    "\n",
     "# == Flavobacteriales ==\n",
     "\n",
     "f, (ax1, ax2, ax3) = plt.subplots(3, 1, sharex=True, figsize=[14, 10])\n",
@@ -186,7 +193,10 @@
     "\n",
     "\n",
     "my_df, coverages = create_matrix.create_matrix(\n",
-    "    'seq_data/Flavobacteriales_21_tails.aln_MANUAL.fasta'\n",
+    "    os.path.join(\n",
+    "        input_dirpath,\n",
+    "        'Flavobacteriales_tails21.aln_amended.fasta'\n",
+    "    )\n",
     ")\n",
     "\n",
     "my_x_ticks =  np.array([  0,  1,  6, 11, 16, 20])\n",
@@ -207,9 +217,9 @@
     "\n",
     "# style using Axes methods\n",
     "\n",
-    "my_logo.ax.set_ylabel('Frequency', fontsize = 12)\n",
+    "my_logo.ax.set_ylabel('Frequency', fontsize=axis_label_fontsize)\n",
     "\n",
-    "my_logo.ax.set_xlabel('Position', fontsize = 12)\n",
+    "my_logo.ax.set_xlabel('Position', fontsize=axis_label_fontsize)\n",
     "my_logo.ax.set_xticks(\n",
     "    my_x_ticks\n",
     ")\n",
@@ -220,7 +230,10 @@
     "# == Sulfolobaceae ==\n",
     "\n",
     "my_df, coverages = create_matrix.create_matrix(\n",
-    "    'seq_data/Sulfolobaceae_21_tails.aln_MANUAL.fasta'\n",
+    "    os.path.join(\n",
+    "        input_dirpath,\n",
+    "        'Sulfolobaceae_tails21.aln_amended.fasta'\n",
+    "    )\n",
     ")\n",
     "\n",
     "my_x_ticks =   np.array([  0,  1,  6, 11, 16, 19, 20])\n",
@@ -240,9 +253,9 @@
     "\n",
     "# style using Axes methods\n",
     "\n",
-    "my_logo.ax.set_ylabel('Frequency', fontsize=12)\n",
+    "my_logo.ax.set_ylabel('Frequency', fontsize=axis_label_fontsize)\n",
     "\n",
-    "my_logo.ax.set_xlabel('Position', fontsize=12)\n",
+    "my_logo.ax.set_xlabel('Position', fontsize=axis_label_fontsize)\n",
     "my_logo.ax.set_xticks(\n",
     "    my_x_ticks\n",
     ")\n",
@@ -254,7 +267,10 @@
     "# == Carsonella ==\n",
     "\n",
     "my_df, coverages = create_matrix.create_matrix(\n",
-    "    'seq_data/Carsonella_21_tails.aln.fasta'\n",
+    "    os.path.join(\n",
+    "        input_dirpath,\n",
+    "        'Carsonella_21tails.aln.fasta'\n",
+    "    )\n",
     ")\n",
     "\n",
     "my_x_ticks = np.array([0, 1, 6, 11, 16, 20])\n",
@@ -268,14 +284,24 @@
     "                         width=.8)\n",
     "\n",
     "# style using Axes methods\n",
-    "my_logo.ax.set_ylabel('Frequency', fontsize=12)\n",
+    "my_logo.ax.set_ylabel('Frequency', fontsize=axis_label_fontsize)\n",
     "\n",
-    "my_logo.ax.set_xlabel('Position', fontsize=12)\n",
+    "my_logo.ax.set_xlabel('Position', fontsize=axis_label_fontsize)\n",
     "my_logo.ax.set_xticks(\n",
     "    my_x_ticks\n",
     ")\n",
     "my_logo.ax.set_xticklabels(ecoli_xticks)\n",
     "my_logo.ax.tick_params(labelbottom=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "figure_fpath = '/home/cager/Dropbox/RiboGrove/text/v1/Figure_1_raw.tiff'\n",
+    "f.savefig(figure_fpath, dpi=300, format='tiff')"
    ]
   }
  ],
